[gd_scene load_steps=46 format=3 uid="uid://bdlk3sxo5ekwn"]

[ext_resource type="Script" uid="uid://c7a5fg47r6h5l" path="res://enemy/boss/warlordturtle.gd" id="1_ef40p"]
[ext_resource type="Texture2D" uid="uid://b405sim5qtso5" path="res://assets/warlord_turle/war_lord_turtle20.png" id="2_prdj8"]
[ext_resource type="PackedScene" uid="uid://dy012gt2k7xmt" path="res://enemy/boss/boomb.tscn" id="2_wuglq"]
[ext_resource type="Texture2D" uid="uid://byu3ukso8nfb5" path="res://assets/warlord_turle/war_lord_turtle19.png" id="3_7i34h"]
[ext_resource type="PackedScene" uid="uid://dduldha4tdymr" path="res://enemy/boss/rocket.tscn" id="3_tvqld"]
[ext_resource type="Texture2D" uid="uid://cbi3asc12djd8" path="res://assets/warlord_turle/war_lord_turtle7.png" id="4_ef40p"]
[ext_resource type="Texture2D" uid="uid://c0716dlo8gxar" path="res://assets/warlord_turle/war_lord_turtle8.png" id="5_dfhj1"]
[ext_resource type="Texture2D" uid="uid://8usoreyem8l6" path="res://assets/foxy/smoke/jump_smoke_1.png" id="5_ilt0q"]
[ext_resource type="Texture2D" uid="uid://jtpy308mqnwi" path="res://assets/foxy/smoke/jump_smoke_2.png" id="6_u7j1o"]
[ext_resource type="Texture2D" uid="uid://t7rsqq6ovg5b" path="res://assets/warlord_turle/war_lord_turtle9.png" id="6_wuglq"]
[ext_resource type="Texture2D" uid="uid://cbk136ktae42o" path="res://assets/foxy/smoke/jump_smoke_3.png" id="7_jostd"]
[ext_resource type="Texture2D" uid="uid://4krxearoaa2b" path="res://assets/warlord_turle/war_lord_turtle10.png" id="7_tvqld"]
[ext_resource type="Texture2D" uid="uid://c8cs1hwh7venp" path="res://assets/foxy/smoke/jump_smoke_4.png" id="8_eovdj"]
[ext_resource type="Texture2D" uid="uid://cf5pogdpweixe" path="res://assets/warlord_turle/war_lord_turtle1.png" id="8_o1uwu"]
[ext_resource type="Texture2D" uid="uid://c8ado4b5gmps3" path="res://assets/warlord_turle/war_lord_turtle2.png" id="9_eluqr"]
[ext_resource type="Texture2D" uid="uid://cbnht8rgqm48t" path="res://assets/warlord_turle/war_lord_turtle3.png" id="10_w6210"]
[ext_resource type="Texture2D" uid="uid://bwycnfbswiu5v" path="res://assets/warlord_turle/war_lord_turtle4.png" id="11_llkam"]
[ext_resource type="Texture2D" uid="uid://jm3o853b83ao" path="res://assets/warlord_turle/war_lord_turtle5.png" id="12_4m7bq"]
[ext_resource type="Texture2D" uid="uid://bpbffh2xkupat" path="res://assets/warlord_turle/war_lord_turtle6.png" id="13_nqhb3"]
[ext_resource type="Texture2D" uid="uid://bl0oejo3qmi2u" path="res://assets/warlord_turle/war_lord_turtle11.png" id="14_w6b8g"]
[ext_resource type="Texture2D" uid="uid://2e2033jdmnlu" path="res://assets/warlord_turle/war_lord_turtle12.png" id="15_0m0l7"]
[ext_resource type="Texture2D" uid="uid://cyejy5rqgtqi0" path="res://assets/warlord_turle/war_lord_turtle13.png" id="16_32p7k"]
[ext_resource type="Texture2D" uid="uid://djvjf4b866cpo" path="res://assets/warlord_turle/war_lord_turtle14.png" id="17_7y1mp"]
[ext_resource type="Texture2D" uid="uid://cvhupyh3q5nu4" path="res://assets/warlord_turle/war_lord_turtle15.png" id="18_qd6e0"]
[ext_resource type="Texture2D" uid="uid://54pjo5a21yil" path="res://assets/warlord_turle/war_lord_turtle16.png" id="19_4o4vh"]
[ext_resource type="Texture2D" uid="uid://ctayudrj6yxji" path="res://assets/warlord_turle/war_lord_turtle17.png" id="20_ilt0q"]
[ext_resource type="Texture2D" uid="uid://bm2ctxhxlaqpo" path="res://assets/warlord_turle/war_lord_turtle18.png" id="21_u7j1o"]
[ext_resource type="Script" uid="uid://xqvgljx4hk1s" path="res://scripts/hit_area_2d.gd" id="22_jostd"]
[ext_resource type="Script" uid="uid://ckk756x8csweu" path="res://enemy/boss/idle.gd" id="24_dfhj1"]
[ext_resource type="PackedScene" uid="uid://p1nb3n6xmbvs" path="res://objects/warning/warning_rocket.tscn" id="25_eluqr"]
[ext_resource type="Script" uid="uid://se0dafo42j0n" path="res://enemy/boss/skill_1.gd" id="25_wuglq"]
[ext_resource type="Script" uid="uid://ctyg2m8uocalk" path="res://enemy/boss/skill_2.gd" id="26_tvqld"]
[ext_resource type="Script" uid="uid://me3i360ygy6a" path="res://enemy/boss/hurt.gd" id="27_dfhj1"]
[ext_resource type="Script" uid="uid://dnkf3foccvr0j" path="res://enemy/boss/dead.gd" id="28_wuglq"]
[ext_resource type="Script" uid="uid://dybr8136u5gn6" path="res://enemy/boss/raise_water.gd" id="29_raise"]
[ext_resource type="Script" uid="uid://btbhb4moahkoo" path="res://enemy/boss/summon_whirlpool.gd" id="30_whirlpool"]
[ext_resource type="PackedScene" uid="uid://ct1tqxgwkuvbe" path="res://scripts/hurt_area_2d.tscn" id="33_llkam"]
[ext_resource type="Script" uid="uid://dhymd74ihp7jc" path="res://enemy/boss/vulnerable.gd" id="34_32p7k"]
[ext_resource type="AudioStream" uid="uid://c8j66nyxonjlv" path="res://assets/sounds/missiles_launch.wav" id="34_nqhb3"]
[ext_resource type="AudioStream" uid="uid://d4druhwdf3ge" path="res://assets/sounds/impactWood_heavy_001.ogg" id="35_w6b8g"]
[ext_resource type="AudioStream" uid="uid://bxqme8ahi0tpd" path="res://assets/sounds/wave.mp3" id="36_w6b8g"]
[ext_resource type="AudioStream" uid="uid://26kiclm3hflh" path="res://assets/sounds/King Dice Attack Laugh (Nr. 1 Cuphead Sound) - Sound Effect for editing.wav" id="37_0m0l7"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ladxf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_prdj8")
}, {
"duration": 1.0,
"texture": ExtResource("5_ilt0q")
}, {
"duration": 1.0,
"texture": ExtResource("6_u7j1o")
}, {
"duration": 1.0,
"texture": ExtResource("7_jostd")
}, {
"duration": 1.0,
"texture": ExtResource("8_eovdj")
}],
"loop": false,
"name": &"dead",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_7i34h")
}, {
"duration": 1.0,
"texture": ExtResource("2_prdj8")
}],
"loop": false,
"name": &"hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_ef40p")
}, {
"duration": 1.0,
"texture": ExtResource("5_dfhj1")
}, {
"duration": 1.0,
"texture": ExtResource("6_wuglq")
}, {
"duration": 1.0,
"texture": ExtResource("7_tvqld")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_4o4vh")
}],
"loop": false,
"name": &"new_animation",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_o1uwu")
}, {
"duration": 1.0,
"texture": ExtResource("9_eluqr")
}, {
"duration": 1.0,
"texture": ExtResource("10_w6210")
}, {
"duration": 1.0,
"texture": ExtResource("11_llkam")
}, {
"duration": 1.0,
"texture": ExtResource("12_4m7bq")
}, {
"duration": 1.0,
"texture": ExtResource("13_nqhb3")
}],
"loop": false,
"name": &"skill1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_wuglq")
}, {
"duration": 1.0,
"texture": ExtResource("7_tvqld")
}, {
"duration": 1.0,
"texture": ExtResource("14_w6b8g")
}, {
"duration": 1.0,
"texture": ExtResource("15_0m0l7")
}, {
"duration": 1.0,
"texture": ExtResource("16_32p7k")
}, {
"duration": 1.0,
"texture": ExtResource("17_7y1mp")
}, {
"duration": 1.0,
"texture": ExtResource("18_qd6e0")
}, {
"duration": 1.0,
"texture": ExtResource("19_4o4vh")
}, {
"duration": 2.0,
"texture": ExtResource("20_ilt0q")
}, {
"duration": 2.0,
"texture": ExtResource("17_7y1mp")
}, {
"duration": 1.0,
"texture": ExtResource("18_qd6e0")
}, {
"duration": 1.0,
"texture": ExtResource("19_4o4vh")
}, {
"duration": 1.0,
"texture": ExtResource("20_ilt0q")
}, {
"duration": 1.0,
"texture": ExtResource("21_u7j1o")
}, {
"duration": 1.0,
"texture": ExtResource("15_0m0l7")
}, {
"duration": 1.0,
"texture": ExtResource("14_w6b8g")
}, {
"duration": 1.0,
"texture": ExtResource("7_tvqld")
}, {
"duration": 1.0,
"texture": ExtResource("6_wuglq")
}],
"loop": false,
"name": &"skill2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_wuglq")
}, {
"duration": 1.0,
"texture": ExtResource("7_tvqld")
}, {
"duration": 1.0,
"texture": ExtResource("14_w6b8g")
}, {
"duration": 6.9,
"texture": ExtResource("15_0m0l7")
}, {
"duration": 1.0,
"texture": ExtResource("14_w6b8g")
}, {
"duration": 1.0,
"texture": ExtResource("7_tvqld")
}, {
"duration": 1.0,
"texture": ExtResource("6_wuglq")
}],
"loop": false,
"name": &"summon",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_prdj8")
}, {
"duration": 1.0,
"texture": ExtResource("3_7i34h")
}],
"loop": true,
"name": &"vulnerable",
"speed": 2.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8hnd2"]
size = Vector2(75, 67)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dkh1m"]
size = Vector2(74, 67)

[node name="WarlordTurtle" type="CharacterBody2D" groups=["boss"]]
scale = Vector2(1.5, 1.5)
collision_layer = 8
script = ExtResource("1_ef40p")
boomb_scene = ExtResource("2_wuglq")
rocket_scene = ExtResource("3_tvqld")
knockback_force = 0.0
max_health = 26
max_invincible = 3.0
oxygen_decrease_rate = 0.0
metadata/_custom_type_script = "uid://s4xx82espxdt"

[node name="Direction" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Direction"]
scale = Vector2(1.0483, 1)
sprite_frames = SubResource("SpriteFrames_ladxf")
animation = &"dead"
frame = 4
frame_progress = 1.0
flip_h = true

[node name="FrontRayCast2D" type="RayCast2D" parent="Direction"]
position = Vector2(9, -4)
target_position = Vector2(34, 0)

[node name="DownRayCast2D" type="RayCast2D" parent="Direction"]
position = Vector2(14, -4)
target_position = Vector2(-1, 40)

[node name="HitArea2D" type="Area2D" parent="Direction"]
collision_layer = 0
collision_mask = 4
script = ExtResource("22_jostd")
metadata/_custom_type_script = "uid://xqvgljx4hk1s"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Direction/HitArea2D"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_8hnd2")

[node name="BoomAndRocket" type="Node2D" parent="Direction"]

[node name="MuzzleBoom1" type="Marker2D" parent="Direction/BoomAndRocket"]
position = Vector2(3, -15)

[node name="MuzzleBoom2" type="Marker2D" parent="Direction/BoomAndRocket"]
position = Vector2(-30, -17)

[node name="MuzzleRocket1" type="Marker2D" parent="Direction/BoomAndRocket"]
position = Vector2(38, -47.3333)

[node name="MuzzleRocket2" type="Marker2D" parent="Direction/BoomAndRocket"]
position = Vector2(-42, -50.33)

[node name="WarningRocket" parent="Direction/BoomAndRocket" instance=ExtResource("25_eluqr")]
position = Vector2(113.333, 10.6667)

[node name="WarningRocket2" parent="Direction/BoomAndRocket" instance=ExtResource("25_eluqr")]
position = Vector2(217.333, 11.3333)

[node name="WarningRocket3" parent="Direction/BoomAndRocket" instance=ExtResource("25_eluqr")]
position = Vector2(316, 14)

[node name="WarningRocket4" parent="Direction/BoomAndRocket" instance=ExtResource("25_eluqr")]
position = Vector2(420, 16)

[node name="HurtArea2D" parent="Direction" instance=ExtResource("33_llkam")]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Direction/HurtArea2D"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_dkh1m")

[node name="States" type="Node" parent="."]

[node name="Idle" type="Node" parent="States"]
script = ExtResource("24_dfhj1")

[node name="Skill1" type="Node" parent="States"]
script = ExtResource("25_wuglq")

[node name="Skill2" type="Node" parent="States"]
script = ExtResource("26_tvqld")

[node name="Hurt" type="Node" parent="States"]
script = ExtResource("27_dfhj1")

[node name="Dead" type="Node" parent="States"]
script = ExtResource("28_wuglq")

[node name="RaiseWater" type="Node" parent="States"]
script = ExtResource("29_raise")

[node name="SummonWhirlpool" type="Node" parent="States"]
script = ExtResource("30_whirlpool")

[node name="Vulnerable" type="Node" parent="States"]
script = ExtResource("34_32p7k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_dkh1m")

[node name="MisslesLaunchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("34_nqhb3")
volume_db = 24.0
bus = &"SFX"

[node name="BombsLaunchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("35_w6b8g")
volume_db = 24.0
bus = &"SFX"

[node name="WaveSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("36_w6b8g")
volume_db = 20.0
bus = &"SFX"

[node name="LaughSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("37_0m0l7")
volume_db = 20.0
bus = &"SFX"

[connection signal="hurt" from="Direction/HurtArea2D" to="." method="_on_hurt_area_2d_hurt"]
